Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8962

lfs df prints nothing and exits with status 0 when given a non-lustre argument

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • Lustre 2.14.0
    • 3
    • 9223372036854775807

      It also ignores everything after the first argument.

      t:lustre-release# lfs df /tmp
      t:lustre-release# echo $?
      0
      t:lustre-release# lfs df /mnt/lustre XXX
      UUID                   1K-blocks        Used   Available Use% Mounted on
      lustre-MDT0000_UUID       141752       19528      112864  15% /mnt/lustre[MDT:0]
      lustre-OST0000_UUID       366744       29892      317380   9% /mnt/lustre[OST:0]
      lustre-OST0001_UUID       366744       29892      317352   9% /mnt/lustre[OST:1]
      
      filesystem_summary:       733488       59784      634732   9% /mnt/lustre
      
      t:lustre-release# echo $?
      0
      t:lustre-release# lfs df XXX /mnt/lustre
      error: invalid path 'XXX': No such file or directory
      t:lustre-release# echo $?
      2
      

            arshad512 Arshad Hussain
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: